--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
+    "g": "^2.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
+    "react-modal": "^3.14.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-scroll-to-top": "^1.0.8",
+    "react-typical": "^0.1.3",
+    "swiper": "^7.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
